# antigravity-bruin-mcp-bigquery

./: .gitignore  README manual.md  README.md  duckdb.db  pyproject.toml
zoomcamp/pipeline/: pipeline.yml
zoomcamp/pipeline/assets/ingestion/: payment_lookup.asset.yml  requirements.txt  trips.py
zoomcamp/pipeline/assets/reports/: trips_report.sql
zoomcamp/pipeline/assets/staging/: trips.sql
