[project]
name = "antigravity-bruin-mcp-bigquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]
